VCS simulator charset

--- a/js/devrig/vcs-rig.html
+++ b/js/devrig/vcs-rig.html
@@ -1,7 +1,8 @@
-<html>
-  <head>
-    <title>Daily VCS Simulator</title>
-    <style>
+<!DOCTYPE html>
+<html><head>
+  <meta charset="utf-8">
+  <title>Daily VCS Simulator</title>
+  <style>
 
 body {
   --highlight-color: #1BEBB9;
